tests/baselines/reference/objectLiteralWithSemicolons4.errors.txt
tests/cases/compiler/objectLiteralWithSemicolons4.ts(2,3): error TS2304: Cannot find name 'a'.
tests/cases/compiler/objectLiteralWithSemicolons4.ts(3,1): error TS1005: ',' expected.


==== tests/cases/compiler/objectLiteralWithSemicolons4.ts (2 errors) ====
    var v = {
      a
      ~
!!! error TS2304: Cannot find name 'a'.
    ;
    ~
!!! error TS1005: ',' expected.